--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -40,7 +40,7 @@
     <string name="iconPackPackageDefault" translatable="false">""</string>
     <string name="icon_pack">Icon pack</string>
     <string name="icon_pack_summary">Change the look of your app icons</string>
-    <string name="icon_pack_none">None</string>
+    <string name="icon_pack_none">Default</string>
     <string name="edit_drop_target_label">Edit</string>
     <string name="edit_hint">Icon name</string>
     <string name="reset_icon">Reset</string>
@@ -51,6 +51,8 @@
     <string name="loading">Loading, please wait</string>
     <string name="icon_chooser">Icon chooser</string>
     <string name="icon_search">Search for icons</string>
+    <!-- Toast message for alerting users that no icon packs are available. -->
+    <string name="msg_no_icon_pack">No icon packs available</string>
 
     <!-- Icon shape -->
     <string name="icon_shape_override_label_custom">Icon shape</string>
